2014-02-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove dead code and fix memory leaks. Found using cppchecker.

	* src/openvassd.c (set_globals_from_preferences): Call plugins_free
	instead of arg_free, fixing memory leaks.

	* src/CMakeLists.txt: Don't build parser.c

	* src/parser.c, src/parser.h: Remove unused files.

	* COPYING: Remove parser.c and parser.h details.

	* src/processes.c (sighand_process_term): Remove unused function.

	* src/sighand.c, src/sighand.h (sighand_alarm): Remove unused function.

	* src/utils.c, src/utils.h (hosts_arglist_to_string): Remove unused
	function.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (attack_network): Removed outdated docstring element.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_terminate): Removed commented-out code fragements.
	It hangs around since at least 9 years.
	(comm_init, comm_wait_order): Write log message when exiting.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (attack_network): Changed return type from int
	to void because it is always returned success anyway (problems
	are reported as errors which is sufficient).

	* src/attack.h: Adjust proto accordingly.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c (scanner_thread): Don't exit early out of
	otp communication. The attack_network method does
	never return anything else than 0 anyway.

2014-02-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	There is no reason why the OTP communication should be interrupted
	in cases where a scan can not be executed (due to whatever reason).
	It is far better continue OTP communication for two reasons: One the
	one hand this way the status of a task can be set to "Error" instead
	of "Stopped".

	* src/attack.c (attack_network): In case no target hosts were
	provided issue an error message and return with OK which prevents
	bailing out of otp.